--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,5 +1,11 @@
 <div>
     <h1>Hola mundo!!! Trabajando con Websocket.</h1>
+    <div>
+        <p>Escribe el nombre del producto que desea agregar: <input id="addBox" type="text"></p>
+    </div>
+    <div>
+        <p>Escribe el id del producto que desea eliminar: <input id="deleteBox" type="text"></p>
+    </div>
     <ul id="productList"></ul>
 </div>
 
