Add login with Github

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,6 +9,7 @@
         <input type="submit">
     </form>
     <p>Create an account <a href="/users/register">Here</a></p>
+    <p>Do you have a Github account? <a href="/github/login">Login using Github</a></p>
 </div>
 
 <script src="/js/login.js"></script>
