Use JWT for login

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,6 +1,6 @@
 <div>
     <h1>Welcome {{user.name}}</h1>
-    <p>Rol: {{user.rol}} &nbsp; <button id="Logout" type="click">Log out</button></p>
+    <p>Rol: {{user.role}} &nbsp; <button id="Logout" type="click">Log out</button></p>
 </div>
 <div>
     {{#each result.docs}}
