Applying profesionnal architecture

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -8,7 +8,7 @@
         <input name="password">
         <input type="submit">
     </form>
-    <p>Create an account <a href="/users/register">Here</a></p>
+    <p>Create an account <a href="/api/users/register">Here</a></p>
     <p>Do you have a Github account? <a href="/github/login">Login using Github</a></p>
 </div>
 
