--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -17,7 +17,7 @@
         <input name="password">
         <input type="submit">
     </form>
-    <p>If you already have an account, please click <a href="/users/login">Here</a></p>
+    <p>If you already have an account, please click <a href="/api/users/login">Here</a></p>
 </div>
 
 <script src="/js/register.js"></script>
